# tgctl

./: .gitignore  Cargo.toml  README.md  flake.nix  telegram.example.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  error.rs  main.rs
src/config/: loader.rs  schema.rs
src/diff/: actions.rs  mod.rs  plan.rs
src/provider/: auth.rs  telegram.rs
src/resources/: forum_topic.rs  group.rs  mod.rs
src/state/: mod.rs  statefile.rs  types.rs
