[package]
name = "tgctl"
version = "0.1.0"
edition = "2021"

[dependencies]
grammers-client = "0.9"
grammers-session = "0.9"
grammers-tl-types = "0.9"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
colored = "2"
dialoguer = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
image = { version = "0.25", features = ["webp"] }
base64 = "0.22.1"
